# cuttle

./: .gitignore  Cargo.toml  README.md  handoff.md  install.sh  uninstall.sh
bench/: .gitignore  Dockerfile  README.md  bench.py  compare_runs.py  harness_suite.py  run-in-docker.sh
bench/harbor_agents/: cuttle_agent.py
bench/runners/: cuttle_runner.py  cuttle_sandbox_runner.py
crates/cuttle-anthropic/: Cargo.toml
crates/cuttle-anthropic/src/: client.rs  error.rs  lib.rs  model.rs  retry.rs  stream.rs
crates/cuttle-audit/: Cargo.toml
crates/cuttle-audit/src/: chain.rs  event.rs  lib.rs  redact.rs  tagging.rs
crates/cuttle-cli/: Cargo.toml
crates/cuttle-cli/src/: args.rs  ask_cmd.rs  audit_cmd.rs  banner.rs  credential_cmd.rs  lib.rs  main.rs  paths.rs  review_cmd.rs  sandbox_cmd.rs  session_cmd.rs  telemetry_cmd.rs
crates/cuttle-credential/: Cargo.toml
crates/cuttle-credential/src/: keychain.rs  lib.rs  record.rs
crates/cuttle-credential/src/primitives/: api_key.rs  helper_hash.rs  mod.rs
crates/cuttle-falsifiers/: Cargo.toml
crates/cuttle-falsifiers/src/: evaluator.rs  lib.rs  report.rs
crates/cuttle-gate/: Cargo.toml
crates/cuttle-gate/src/: capabilities.rs  decision.rs  lib.rs
crates/cuttle-gate/src/primitives/: attestation.rs
crates/cuttle-input/: Cargo.toml
crates/cuttle-input/src/: lib.rs
crates/cuttle-memory/: Cargo.toml
crates/cuttle-memory/src/: layout.rs  lib.rs  promotion.rs  text.rs
crates/cuttle-review/: Cargo.toml
crates/cuttle-review/src/: error.rs  lib.rs  prompt.rs  reviewer.rs
crates/cuttle-review/tests/: live_review.rs
crates/cuttle-rewardloop/: Cargo.toml
crates/cuttle-rewardloop/src/: entry.rs  lib.rs  registry.rs  signing.rs
crates/cuttle-runtime/: Cargo.toml
crates/cuttle-runtime/src/: lib.rs  lockfile.rs  signing_key.rs
crates/cuttle-runtime/src/primitives/: lockfile_path.rs  mod.rs  session_id.rs  tier.rs
crates/cuttle-sandbox/: Cargo.toml
crates/cuttle-sandbox/src/: error.rs  lib.rs  profile.rs  spawn.rs
crates/cuttle-skills/: Cargo.toml
crates/cuttle-skills/src/: allowlist.rs  content.rs  lib.rs
crates/cuttle-telemetry/: Cargo.toml
crates/cuttle-telemetry/src/: aggregate.rs  lib.rs  report.rs
docs/: DECISIONS.md  PRD.md  TDD.md  adversarial-review-prd-v1.2.md  falsifiers.md  output-quality-prd-v1.1-delta.md  output-quality-prd-v1.2-delta.md  output-quality-prd-v1.3-delta.md  output-quality-prd-v1.md  output-quality-prd-v3-delta.md  sandbox-validation.md  threat-model-prd-v1.1-delta.md  threat-model-prd-v1.2-delta.md  threat-model-prd-v1.3-delta.md  threat-model-prd-v1.md  threat-model-prd-v3-delta.md
docs/archive/: PRD-v0-2026-04-25.md
docs/known-issues/: sandbox-python-git-hang.md
process/: carlos-arguelles-input.md  martin-fowler-input.md  session-1-conversation-summary.md
sessions/: 2026-04-25-session-1-snapshot.md  2026-04-25-session-2-snapshot.md
