[workspace]
resolver = "3"
members = [
    "crates/cuttle-credential",
    "crates/cuttle-gate",
    "crates/cuttle-input",
    "crates/cuttle-runtime",
    "crates/cuttle-audit",
    "crates/cuttle-memory",
    "crates/cuttle-skills",
    "crates/cuttle-rewardloop",
]

[workspace.package]
edition = "2024"
rust-version = "1.95"
license = "Apache-2.0"
authors = ["Mohammed Qazi <sirajuddin.qazi@gmail.com>"]
repository = "local"
publish = false

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
subtle = "2"
zeroize = { version = "1", features = ["zeroize_derive"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
hmac = "0.12"
rand = "0.9"
dirs = "6"
tempfile = "3"

[profile.release]
panic = "abort"
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.dev]
panic = "unwind"
