[workspace]
resolver = "3"
members = [
    "crates/cuttle-credential",
    "crates/cuttle-gate",
    "crates/cuttle-input",
    "crates/cuttle-runtime",
    "crates/cuttle-audit",
    "crates/cuttle-memory",
    "crates/cuttle-skills",
    "crates/cuttle-rewardloop",
    "crates/cuttle-falsifiers",
    "crates/cuttle-anthropic",
    "crates/cuttle-sandbox",
]

[workspace.package]
edition = "2024"
rust-version = "1.95"
license = "Apache-2.0"
authors = ["Mohammed Qazi <sirajuddin.qazi@gmail.com>"]
repository = "local"
publish = false

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
subtle = "2"
zeroize = { version = "1", features = ["zeroize_derive"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
hmac = "0.12"
rand = "0.9"
dirs = "6"
tempfile = "3"
# HTTP stack for cuttle-anthropic. rustls-tls (NOT default-tls) keeps the
# dep tree pure-Rust and avoids OpenSSL platform-crypto coupling per the
# sbom-license posture in PRD §9.
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "io-util", "time"] }
futures-util = "0.3"
bytes = "1"
url = "2"

[profile.release]
panic = "abort"
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.dev]
panic = "unwind"
