[package]
name = "cuttle-cli"
version = "0.0.16"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish = false
description = "Cuttle top-level CLI binary. v0.0.16 adds cuttle credential set/show/delete (Keychain-backed) + cascade-resolve in ask + session so ANTHROPIC_API_KEY env-var becomes optional once a Keychain entry is set."

[[bin]]
name = "cuttle"
path = "src/main.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
dirs.workspace = true
tokio.workspace = true
futures-util.workspace = true
sha2.workspace = true
rand.workspace = true
chrono.workspace = true
rpassword.workspace = true
cuttle-audit = { path = "../cuttle-audit" }
cuttle-telemetry = { path = "../cuttle-telemetry" }
cuttle-credential = { path = "../cuttle-credential" }
cuttle-anthropic = { path = "../cuttle-anthropic" }
cuttle-sandbox = { path = "../cuttle-sandbox" }

[dev-dependencies]
tempfile.workspace = true
