[package]
name = "cuttle-cli"
version = "0.0.17"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish = false
description = "Cuttle top-level CLI binary. v0.0.17 adds --system flag to cuttle ask (mirrors session start), enabling apples-to-apples bench comparison with the direct-Anthropic-SDK arm in bench/."

[[bin]]
name = "cuttle"
path = "src/main.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
dirs.workspace = true
tokio.workspace = true
futures-util.workspace = true
sha2.workspace = true
rand.workspace = true
chrono.workspace = true
rpassword.workspace = true
cuttle-audit = { path = "../cuttle-audit" }
cuttle-telemetry = { path = "../cuttle-telemetry" }
cuttle-credential = { path = "../cuttle-credential" }
cuttle-anthropic = { path = "../cuttle-anthropic" }
cuttle-sandbox = { path = "../cuttle-sandbox" }

[dev-dependencies]
tempfile.workspace = true
