[package]
name = "cuttle-credential"
version = "0.0.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish = false
description = "Cuttle credential vault: ApiKey + HelperHash domain primitives. v0.0.2 adds ApiKey::from_env_var for the cuttle-cli ask path; vault-only constructor invariant preserved."

[dependencies]
serde.workspace = true
sha2.workspace = true
subtle.workspace = true
zeroize.workspace = true
chrono.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
