[package]
name = "cuttle-credential"
version = "0.0.4"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish = false
description = "Cuttle credential vault: ApiKey + HelperHash domain primitives. v0.0.4 adds macOS Keychain backend (store/fetch/delete/metadata) + ApiKey::resolve cascade (env → Keychain). Vault-only constructor invariant preserved."

[dependencies]
serde.workspace = true
sha2.workspace = true
subtle.workspace = true
zeroize.workspace = true
chrono.workspace = true
thiserror.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
security-framework.workspace = true

[dev-dependencies]
serde_json.workspace = true
