[package]
name = "cuttle-runtime"
version = "0.0.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish = false
description = "Cuttle session orchestration: LockfilePath + TierClassification + signing-key + state-coherence. Per docs/TDD.md §2 + §3."

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
subtle.workspace = true
hmac.workspace = true
rand.workspace = true
dirs.workspace = true
chrono.workspace = true
thiserror.workspace = true
zeroize.workspace = true

[dev-dependencies]
tempfile.workspace = true
